--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fancyapps/ui": "^5.0.33",
     "@tailwindcss/forms": "^0.5.10",
     "@types/leaflet": "^1.9.8",
+    "dotenv": "^17.2.2",
     "framer-motion": "^11.0.0",
     "leaflet": "^1.9.4",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
